# NXWine

./: .gitmodules  COPYING  NXWine.applescript  NXWine.dmg  README.md  build.sh  build_bundle.sh  createwineprefix.sh  inf.m4  nxwine.icns  wine.in  wineloader.in  wineloader.sh
inf/: dxredist.inf  init.inf  osx-wine.inf  vcredist.inf
nativedlls/: l3codecx.ax
patch/: glib_autogen.patch  ipamona.patch  nxwine.patch
patches/: autohidemenu.patch  autorelease.patch  changelocale.patch  deviceid.patch  excludefonts.patch  readline.patch  winetricks_helper_xpsp3jp.patch  winetricks_tkool.patch
scripts/: inf.m4  init.py  installer-component.plist  installer.applescript  main.applescript  nxwinetricks.sh  win2k.reg  wineloader.sh  winetricksloader.sh  winxp.reg
source/: freetype2  gst-plugins-base  gst-plugins-base-0.11.99.tar.xz  gst-plugins-good  gstreamer  gstreamer-0.11.99.tar.xz  jpeg-8.tar.bz2  libffi  libjpeg-turbo  libpng  nasm  nasm-2.10.07.tar.xz  python  winetricks
source/Konatu_ver_20121218/: README.txt
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/: ChangeLog  config.h.in  configure  configure.in  opfc-ModuleHP.spec
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/doc/: Makefile.am  Makefile.in
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/fonts/: README_ipamona.txt
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/libopvp/: Makefile.am  Makefile.in  opvp_rpc_core.c  opvp_rpc_server.h
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/libopvp/doc/: Makefile.am
source/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/opvp/: HPPageColor.c  Makefile.am
source/winetricks/.svn/: all-wcprops  entries
source/winetricks/src/.svn/: all-wcprops  entries
source/winetricks/tests/.svn/: all-wcprops  entries
sources/: SDL  SDL_sound  SOURCE_LIST  binutils  cairo  flac  fontconfig  freetype  gdk-pixbuf  glib  gmp  gmp-5.1  gmp-5.1.2.tar.xz  gnutls  gobject-introspection  guile  icu  icu-release-51-2  jasper-1.900.1.tar.bz2  libcroco  libffi  libicns  libmodplug  librsvg  libtasn1  libtiff  libusb  libusb-compat-0.1  libxml2  libxslt  mpg123  nasm  nettle  ogg  orc  pango  pkg-config  python  readline  sane-backends  (+7 more)
sources/Konatu_ver_20121218/: README_Japanese.txt
sources/nativedlls/: FILELIST.txt
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/: Makefile.am  Makefile.in  README  README.jp  VERSION  aclocal.m4  ltmain.sh
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/fonts/: COPYING.font.ja  Makefile.am  Makefile.in
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/fonts/doc/mona/: README.euc
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/libopvp/: COPYING  README.jp  opvp_common.h  opvp_driver.h  opvp_rpc_core.h  opvp_rpc_reqno.h  opvp_rpc_server.c  pdapi.h
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/libopvp/doc/: Makefile.in
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/opvp/: Makefile.in
sources/opfc-ModuleHP-1.1.1_withIPAMonaFonts-1.0.8/ppd/: Makefile.am  Makefile.in  OPVP-HP-Color_LaserJet_4600.ppd  OPVP-HP-Color_LaserJet_5500.ppd
